3.5.4
  * Update icon (bug 649359)
  * Fix appearance of tweaks to no longer have a white background
  * Remove welcome image and start with a tweakgroup selected by default

3.5.0
  * Work with new gnome shell dbus interface

3.4.0
  * Translation updates
  * Fix user-theme shell extension support (Giovanni Campagna, bug 675106)
    NOTE: this requires pygobject >= 3.2.1
  * Support workspaces only on primary
  * Support static workspaces
  * Change widget for text-scaling-factor to SpinButton
  * Add nautils always-use-location-entry
  * Change widget for text-scaling-factor to SpinButton (Robin Stocker, bug 650660)
  * Dont crash on missing schemas (bug 647132)

3.3.4
  * Adapt to Metacity/Mutter/Shell ported to GSettings
  * Adapt to GNOME Shell 3.4 DBus interface

3.2.2
  * Dont die on malformed schemas

3.2.1
  * Translation updates
  * Ellipsize long strings - should fix window size issues (bug 649520)

3.2.0
   * Translation updates

3.1.90
   * Adopt GNOME version numbering - it is easier to remember
   * Rename some tweak groups, File Manager -> Desktop, etc
   * Fix build against PyGObject-3
   * Improve search results
   * Support GNOME Shell 3.2 extensions

3.1.0
   * Change tweakgroup architecture, tweaks in different files can appear in the same
     categories now; move window border theme to interfaces
   * Tweaks can now override summary/description usually obtained from gconf/gsettings
   * Mark many strings as translatable.
   * Now appears as 'Advanced Settings' in GNOME shell search
   * Add a -v,--verbose option that prints changed settings
   * Add - -d,--debug option
   * Add Unity to OnlyShowIn

3.0.5
   * More autostart desktop file fixes. Try harder to autostart nautilus when
     tweaking desktop handling.
   * Appearance improvements (theme install, sorted combo boxes)
   * Tweak window focus mode (focus follows mouse)
   * Tweak desktop item visibility with more control (show trash, show computer etc)