@@ -2,6 +2,7 @@
   * Update icon (bug 649359)
   * Fix appearance of tweaks to no longer have a white background
   * Remove welcome image and start with a tweakgroup selected by default
+  * Add link to extensions.gnome.org
 
 3.5.0
   * Work with new gnome shell dbus interface
